Continue work to make app demoable.

--- a/qad-geo-proto/index.html
+++ b/qad-geo-proto/index.html
@@ -30,7 +30,7 @@
 
     <script src="scripts/mobileUtils.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/dataSources.js"></script>
+    <script src="scripts/common.js"></script>
     <script src="scripts/home.js"></script>
     <script src="scripts/map.js"></script>
     <script src="scripts/orderList.js"></script>
